Closed Bug 1498466 Opened 7 years ago Closed 7 years ago

Storage Access API hasStorageAccess() always returns false with `network.cookie.cookieBehavior = 0`

Categories

(Firefox :: Protections UI, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
Firefox 64
Tracking Status
firefox64 --- fixed

People

(Reporter: englehardt, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file)

When the default cookie policy is used (network.cookie.cookieBehavior = 0) calls to hasStorageAccess() always return false. Calls to requestStorageAccess() resolve the promise as if storage access is granted (which is expected). Steps to reproduce: * Visit https://senglehardt.com/test/storage_access/ with dom.storage_access.enabled = true. * Click "Call hasStorageAccess()"
Oops, great find!
Assignee: nobody → ehsan
Status: NEW → ASSIGNED
Pushed by eakhgari@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/7b24c0c835bf Ensure that hasStorageAccess() returns a sensible value with cookieBehavior set to accept all cookies r=baku
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 64
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: