Bug 1498466 - Ensure that hasStorageAccess() returns a sensible value with cookieBehavior set to accept all cookies r=baku

Differential Revision: https://phabricator.services.mozilla.com/D8584